Fixing hyperlink issue from navigation page

--- a/FunctionalRequirements.html
+++ b/FunctionalRequirements.html
@@ -2,7 +2,7 @@
 layout: page
 title: FunctionalRequirements
 permalink: /FunctionalRequirements/
-nav_exclude: true
+nav_exclude: false
 ---
 
 <!DOCTYPE html>
