Still troubleshooting hyperlinking to correct collection urls

--- a/FunctionalRequirements.html
+++ b/FunctionalRequirements.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: FunctionalRequirements
+title: Functionality Overview
 permalink: /FunctionalRequirements/
 nav_exclude: false
 ---
