--- a/navigation.html
+++ b/navigation.html
@@ -1,11 +1,11 @@
 ---
 layout: page
-title: Navigation
+title: Stakeholder Engagements
 ---
 
 <!-- Comment in html. The below is written in liquid as per Jekyll documentation on navigation (c.f.
 https://jekyllrb.com/tutorials/navigation/#scenario-8-retrieving-items-based-on-front-matter-properties )hence it will be rendered just as markdown would -->
-<h3>Navigation</h3>
+<h3>Stakeholder contributions</h3>
 <ul>
     {% for plot in site.plots %}
       <li><a href="{{ site.github.repository_url }}{{ plot.url }}">{{ plot.title }}</a></li>
